crates/aura-macros/tests/boundaries/capability_boundary_missing_family.stderr
error: capability_boundary requires `family = "..."`
 --> tests/boundaries/capability_boundary_missing_family.rs:3:1
  |
3 | / #[aura_macros::capability_boundary(
4 | |     category = "capability_gated",
5 | |     capability = "demo-capability"
6 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `aura_macros::capability_boundary` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `aura_core::LifecyclePublicationCapability`
 --> tests/boundaries/capability_boundary_missing_family.rs:1:5
  |
1 | use aura_core::LifecyclePublicationCapability;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
